# FastApiBook

FastApiBook/: pyproject.toml
FastApiBook/FastApiBook/: .env.example  docker-compose.yml  main.py  pyproject.toml
FastApiBook/FastApiBook/docs/_build/html/: index.html
FastApiBook/FastApiBook/migrations/: env.py
FastApiBook/FastApiBook/migrations/versions/: 4dccf5d700eb_change_data_type.py  fdf90b167394_init.py
FastApiBook/FastApiBook/src/conf/: config.py
FastApiBook/FastApiBook/src/database/: db.py  fu_db.py
FastApiBook/FastApiBook/src/models/: models.py
FastApiBook/FastApiBook/src/repository/: address_book.py  users.py
FastApiBook/FastApiBook/src/routes/: address_book.py  auth.py  users.py
FastApiBook/FastApiBook/src/schemas/: contact.py  user.py
FastApiBook/FastApiBook/src/services/: auth.py  email.py
FastApiBook/FastApiBook/src/services/templates/: forgot_password.html  verify_email.html
FastApiBook/FastApiBook/tests/: test_address_book.py  test_auth.py  test_configurations.py  test_db.py  test_unit_repository_address_book.py  test_unit_repository_users.py
