[tool.poetry]
name = "addressbookapi"
version = "0.1.0"
description = ""
authors = ["dovgo <dovgopolyks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
fastapi = "0.105.0"
uvicorn = {extras = ["standard"], version = "0.24.0.post1"}
sqlalchemy = "2.0.23"
alembic = "1.13.0"
asyncpg = "0.29.0"
pydantic = {extras = ["email"], version = "2.5.2"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-jose = "3.3.0"
libgravatar = "1.0.4"
python-multipart = "0.0.6"
fastapi-users = {extras = ["sqlalchemy"], version = "12.1.2"}
fastapi-mail = "1.4.1"
fastapi-limiter = "0.1.5"
redis = "4.6.0"
python-dotenv = "1.0.0"
cloudinary = "1.37.0"


[tool.poetry.group.dev.dependencies]
sphinx = "7.2.6"

[tool.poetry.group.test.dependencies]
pytest-cov = "4.1.0"
httpx = "0.26.0"
pytest-asyncio = "0.23.3"
pytest = "7.4.4"
aiosqlite = "0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = "ignore::DeprecationWarning"
